# hykkt

./: .clang-format  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  FindHykktCudaLibraries.cmake  HyKKTConfig.cmake  HyKKTConfigVersion.cmake  LICENSE  Makefile  NOTICE  README.md  cmake_install.cmake  deception_test.sbatch  summit_test.bsub  test-deception.sbatch  test.657649.err  test.657649.out  test.658384.err  test.658384.out
.github/workflow/: push_mirror.yaml
.github/workflows/: push_mirror.yaml
.gitlab/: basic.gitlab-ci.yml  deception.gitlab-ci.yml  newell.gitlab-ci.yml
Testing/Temporary/: CTestCostData.txt
buildsystem/: build.sh  deception-env.sh  newell-env.sh  summit-env.sh
cmake/: FindAMD.cmake  HyKKTConfig.cmake.in  clang-format.cmake
examples/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  Ruiz_driver.cpp  chol_driver  cmake_install.cmake  cuSolver_driver_cholesky.cpp  cuSolver_driver_cholesky.cu  cuSolver_driver_hybrid.cpp  cuSolver_driver_hybrid.cu  cuSolver_driver_schur_cg.cpp  cuSolver_driver_schur_cg.cu  cuSolver_driver_solver.cpp  cuSolver_driver_solver_emulator.cpp  cuSolver_driver_solver_fileio.cpp  driver_BiELL.cpp  driver_lb_helper.cpp  driver_log_barrier.cpp  driver_lpqp_solver.cpp  driver_operator_applier.cpp  hybrid_driver  perm_driver  perm_driver.cpp  ruiz_driver  sandbox_test.cpp  schur_cg_driver  solver_driver
examples/scripts/: run-emu-all-10K.sh  run-emu-all-25K.sh  run-emu-all-70K.sh  run-emu-indiv-10K.sh  run-emu-indiv-25K.sh  run-emu-indiv-70K.sh
include/: RuizClass.hpp  SchurComplementConjugateGradient.hpp  input_functions.hpp  matrix_vector_ops.hpp  permcheck.hpp  ruiz_scaling.hpp  schur_complement_cg.hpp
src/: .Makefile.swp  .RuizClass.cu.swp  CMakeLists.txt  CTestTestfile.cmake  CholeskyClass.cpp  CholeskyClass.cu  CholeskyClass.hpp  HykktSolver-Timing.cpp  HykktSolver.cpp  HykktSolver.cu  HykktSolver.hpp  LBObjectiveInfo.hpp  LQOperator.cpp  LQOperator.hpp  LogBarrierHelper.cpp  LogBarrierHelper.hpp  LogBarrierInfo.cpp  LogBarrierInfo.hpp  LogBarrierSolver.cpp  LogBarrierSolver.hpp  MMatrix.cpp  MMatrix.hpp  Makefile  MatMatProduct.cu  PCGOperator.hpp  PermClass.cpp  PermClass.cu  PermClass.hpp  PreconditionedCG.cpp  PreconditionedCG.hpp  README.md  RuizClass.cpp  RuizClass.cu  RuizClass.hpp  Ruiz_driver.cu  Ruiz_scaling.cu  SchurComplementConjugateGradient.cpp  SchurComplementConjugateGradient.cu  SchurComplementConjugateGradient.hpp  SpgemmClass.cpp  (+50 more)
src/Models/: BiELLMat.cpp  BiELLMat.hpp
src/mats/: datagen.jl  spmv_julia_test.jl
src/mats/a10k/: block_Dd_matrix_ACTIVSg10k_AC_09.mtx  block_Jd_matrix_ACTIVSg10k_AC_09.mtx  block_rs_ACTIVSg10k_AC_09.mtx  block_rx_ACTIVSg10k_AC_09.mtx  block_ry_ACTIVSg10k_AC_09.mtx  block_ryd_ACTIVSg10k_AC_09.mtx
src/mats/a200/: block_Dd_matrix_ACTIVSg200_AC_00.mtx  block_Dd_matrix_ACTIVSg200_AC_09.mtx  block_Dd_matrix_ACTIVSg200_AC_10.mtx  block_H_matrix_ACTIVSg200_AC_00.mtx  block_H_matrix_ACTIVSg200_AC_09.mtx  block_H_matrix_ACTIVSg200_AC_10.mtx  block_J_matrix_ACTIVSg200_AC_00.mtx  block_J_matrix_ACTIVSg200_AC_09.mtx  block_J_matrix_ACTIVSg200_AC_10.mtx  block_Jd_matrix_ACTIVSg200_AC_00.mtx  block_Jd_matrix_ACTIVSg200_AC_09.mtx  block_Jd_matrix_ACTIVSg200_AC_10.mtx  block_rs_ACTIVSg200_AC_00.mtx  block_rs_ACTIVSg200_AC_09.mtx  block_rs_ACTIVSg200_AC_10.mtx  block_rx_ACTIVSg200_AC_00.mtx  block_rx_ACTIVSg200_AC_09.mtx  block_rx_ACTIVSg200_AC_10.mtx  block_ry_ACTIVSg200_AC_00.mtx  block_ry_ACTIVSg200_AC_09.mtx  block_ry_ACTIVSg200_AC_10.mtx  block_ryd_ACTIVSg200_AC_00.mtx  block_ryd_ACTIVSg200_AC_09.mtx  block_ryd_ACTIVSg200_AC_10.mtx
src/mats/a2000/: block_Dd_matrix_ACTIVSg2000_AC_09.mtx  block_Dd_matrix_ACTIVSg2000_AC_10.mtx  block_H_matrix_ACTIVSg2000_AC_09.mtx  block_H_matrix_ACTIVSg2000_AC_10.mtx  block_J_matrix_ACTIVSg2000_AC_09.mtx  block_J_matrix_ACTIVSg2000_AC_10.mtx  block_Jd_matrix_ACTIVSg2000_AC_09.mtx  block_Jd_matrix_ACTIVSg2000_AC_10.mtx  block_rs_ACTIVSg2000_AC_09.mtx  block_rs_ACTIVSg2000_AC_10.mtx  block_rx_ACTIVSg2000_AC_09.mtx  block_rx_ACTIVSg2000_AC_10.mtx  block_ry_ACTIVSg2000_AC_09.mtx  block_ry_ACTIVSg2000_AC_10.mtx  block_ryd_ACTIVSg2000_AC_09.mtx  block_ryd_ACTIVSg2000_AC_10.mtx
src/mats/a200_chol/: rhs_chol_ACTIVSg200_AC_00.mtx
src/mats/a200_schur/: CG_rhs_ACTIVSg200_AC_00.mtx  H_matrix_ACTIVSg200_AC_00.mtx  JC_matrix_ACTIVSg200_AC_00.mtx
src/mats/a25k/: block_Dd_matrix_ACTIVSg25k_AC_09.mtx  block_rs_ACTIVSg25k_AC_09.mtx  block_ry_ACTIVSg25k_AC_09.mtx  block_ryd_ACTIVSg25k_AC_09.mtx
src/mats/a70k/: block_rs_ACTIVSg70k_AC_09.mtx  block_ryd_ACTIVSg70k_AC_09.mtx
src/mats/applier/: a.mtx  exp_apply.mtx  exp_diag.mtx  exp_extract.mtx  h.mtx  q.mtx  vin.mtx
src/mats/lbhelpers/: b.mtx  c.mtx  inv_hessian.mtx  lp_gradient.mtx  q.mtx  qp_gradient.mtx  x.mtx
src/mats/logbarrier/: a.mtx  b.mtx  c.mtx  q.mtx
src/mats/lpqp/: lp_a_test.mtx  lp_h1_test.mtx  lp_h2_test.mtx  lp_res1_test.mtx  lp_res2_test.mtx  qp_a_test.mtx  qp_h1_test.mtx  qp_h2_test.mtx  qp_q_test.mtx  qp_res1_test.mtx  qp_res2_test.mtx
src/mats/sandbox/: a.mtx  v1.mtx  v2.mtx  x.mtx  y.mtx
src/old_scripts/: .hybrid_batch_200.swp  Ruiz_batch  Ruiz_compile_run  adapted_Ruiz_scaling.cu  hybrid_batch_2000  hybrid_compile_run  perm_compile_run
utilities/: README.md  SymRuizScaling.m  cholesky_matrix_extractor.m  findblocks.m  getallparts.m  matrix_ACTIVSg200_AC_00.mtx  mmwrite.m  rhs_ACTIVSg200_AC_00.mtx
